fix document overflowing issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,13 +14,13 @@ html,
 body {
   margin: 0;
   padding: 0;
+  overflow-x: clip;
 }
 
 body {
   font-family: $mainFont;
   background-color: $background;
   color: #f5f5f5;
-  overflow-x: hidden;
 }
 
 *,
@@ -28,7 +28,6 @@ body {
 *::after {
   box-sizing: border-box;
   scroll-behavior: smooth;
-  
 }
 
 .copy-alert {
@@ -50,4 +49,3 @@ body {
   opacity: 0;
   transition: visibility 0.5s, opacity 0.5s linear;
 }
-
